# FastAPI-boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: deploy.yml  lint.yml  test.yml
docs/: TODO.md  api-boilerplate-roadmap.md  info.md
migrations/: env.py
migrations/versions/: 001_initial_schema_and_seed_genres.py  002_add_soft_delete.py  003_add_refresh_token_tables.py  004_add_audit_logs.py  005_add_feature_flags.py
scripts/: seed.py
src/app/: main.py
src/app/background/: scheduled.py
src/app/background/tasks/: __init__.py  movie_stats.py
src/app/core/api/: router.py
src/app/core/cache/: feature_flags.py
src/app/core/config/: broker.py  database.py  logs.py  redis.py  settings.py
src/app/core/health/: checks.py  router.py
src/app/core/middleware/: cache.py  headers.py  rate_limit.py
src/app/scheduler/: scheduler.py
tests/: conftest.py
tests/factories/: __init__.py  actor.py  director.py  feature_flag.py  genre.py  movie.py  movie_cast.py  review.py  user.py
tests/helpers/: __init__.py  auth.py
tests/integration/: builders.py  conftest.py  helpers.py
tests/integration/audit_logs/: test_audit_log.py
tests/integration/cache/: test_cache_control.py  test_etag.py
tests/integration/feature_flags/: conftest.py
tests/integration/health/: test_health.py
tests/unit/: test_feature_flag_evaluation.py  test_jwt.py  test_password.py  test_schemas.py
(+283 files in other folders)
